force-app/main/default/objects/BGCK__Question__c/fields/BGCK__Active__c.field-meta.xml
<CustomField>
    <fullName>BGCK__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>