force-app/main/default/objects/BGCK__Question__c/fields/BGCK__Body__c.field-meta.xml
<CustomField>
    <fullName>BGCK__Body__c</fullName>
    <label>Body</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>