force-app/main/default/objects/BGCK__Question__c/fields/BGCK__Checklist_Version__c.field-meta.xml
<CustomField>
    <fullName>BGCK__Checklist_Version__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Checklist Version</label>
    <referenceTo>BGCK__Checklist_Version__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Questions</relationshipName>
    <type>Lookup</type>
</CustomField>