force-app/main/default/objects/BGCK__Question__c/fields/BGCK__Criteria__c.field-meta.xml
<CustomField>
    <fullName>BGCK__Criteria__c</fullName>
    <label>Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>