force-app/main/default/objects/BGCK__Question__c/fields/BGCK__isOptional__c.field-meta.xml
<CustomField>
    <fullName>BGCK__isOptional__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if true, do not enforce question to be answered on save or save and complete</description>
    <label>Optional</label>
    <type>Checkbox</type>
</CustomField>