force-app/main/default/objects/BGCK__Question__c/fields/BGCK__Question__c.field-meta.xml
<CustomField>
    <fullName>BGCK__Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Question</label>
    <referenceTo>BGCK__Question__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Questions</relationshipName>
    <type>Lookup</type>
</CustomField>