force-app/main/default/objects/BGCK__Question__c/fields/BGCK__Question_Number__c.field-meta.xml
<CustomField>
    <fullName>BGCK__Question_Number__c</fullName>
    <label>Question Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>