force-app/main/default/objects/BGCK__Question__c/fields/BGCK__Section_Name__c.field-meta.xml
<CustomField>
    <fullName>BGCK__Section_Name__c</fullName>
    <label>Section Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>