force-app/main/default/objects/BGCK__Question__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BGCK__Question_Type__c</columns>
    <columns>BGCK__Body__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>